# tpa-homework1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  mainDEVICE.cpp  mainMACHINE.cpp  maindevice.cpp  mainmachine.cpp
include/: Car.h  mgCatapult.h  mgMachine.h
include/catch2/: catch2.hpp
src/: Car.cpp  mgCatapult.cpp  mgMachine.cpp
tests/: CMakeLists.txt  testcar.cpp  testcatapult.cpp  testmachine.cpp
